--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-burger-menu": "^3.0.9",
         "react-fast-marquee": "^1.6.0",
         "react-router-dom": "^6.14.2",
+        "react-switch": "^7.0.0",
         "sass": "^1.64.2",
         "three": "^0.155.0"
     }
