--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@react-three/fiber": "^8.13.6",
         "@types/three": "^0.155.0",
         "@vitejs/plugin-react": "^4.0.4",
+        "lottie-react": "^2.4.0",
         "react": "^18.2.0",
         "react-burger-menu": "^3.0.9",
         "react-fast-marquee": "^1.6.0",
